project/istio/egress-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: reqres
spec:
  hosts:
  - reqres.in
  ports:
  - number: 80
    name: http
    protocol: HTTP
