project/istio/fault-injection-delay-single-user-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: singleuser
spec:
  hosts:
  - singleuser
  http:
  - match:
    - headers:
        test-header:
          exact: test-user
    fault:
      delay:
        percent: 100
        fixedDelay: 3s
    route:
      - destination:
          host: singleuser
          subset: v1
  - route:
      - destination:
          host: singleuser
          subset: v2
