project/istio/ingress-gateway-single-user.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-single-user-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: singleuser
spec:
  hosts:
  - "*"
  gateways:
  - istio-single-user-gateway
  http:
  - route:
    - destination:
        host: singleuse
        port:
          number: 80
