project/istio/ingress-gateway-task.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-task-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alltask
spec:
  hosts:
  - "*"
  gateways:
  - istio-task-gateway
  http:
  - route:
    - destination:
        host: alltask
        port:
          number: 80
