project/istio/routing-single-user-header-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: singleuser
spec:
  hosts:
  - singleuser
  http:
  - match:
    - headers:
        test-header:
          exact: test-user
    route:
      - destination:
          host: singleuser
          subset: v2
  - route:
    - destination:
        host: singleuser
        subset: v1
