project/istio/routing-single-user-weight-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: singleuser
spec:
  hosts:
  - singleuser
  http:
  - route:
    - destination:
        host: singleuser
        subset: v1
      weight: 25
    - destination:
        host: singleuser
        subset: v2
      weight: 75
